fix overlap nodes

--- a/app/styles/tree/tree-level-6.scss
+++ b/app/styles/tree/tree-level-6.scss
@@ -359,8 +359,8 @@
               }
             }
             &-1011{
-              bottom: 327px;
-              left: 555px;
+              bottom: 348px;
+              left: 556px;
               width: 30px;
               height: 30px;
               &.florecida{
@@ -831,7 +831,7 @@
             }
             &-11112{
               bottom: 330px;
-              left: 545px;
+              left: 535px;
               width: 30px;
               height: 30px;
               &.florecida{
@@ -1019,8 +1019,8 @@
               }
             }
             &-31100{
-              bottom: 410px;
-              left: 885px;
+              bottom: 420px;
+              left: 883px;
               width: 30px;
               height: 30px;
               &.florecida{
